--- a/H.html
+++ b/H.html
@@ -19,7 +19,7 @@
   </section>
 
   <section class="acoes">
-    <a href="Deposito.html" class="botao"><img src="10003.png" alt=""> Deposito</a>
+    <a href="deposito.html" class="botao"><img src="10003.png" alt=""> Deposito</a>
     <a href="saque.html" class="botao"><img src="10004.png" alt=""> Retirada</a>
     <button class="botao" id="checkin-diario"><img src="10005.png" alt=""> Check-in Diário</button>
     <a href="download.html" class="botao"><img src="10011.png" alt=""> Baixar App</a>
