--- a/H.html
+++ b/H.html
@@ -29,7 +29,7 @@
   <div class="notificacao">
     <span class="icone-sino">🔔</span>
     <marquee behavior="scroll" direction="left">
-     senhores membros da plataforma hinvest a opção de recarga ainda não tá liberado porque a plataforma ainda está tendo configurado novamente é só aguardar quando tiver liberado que vocês poderá fazer sua recarga e seus investimentos plataforma h inverte tenha uma boa sorte 
+     Atenção senhores investidores mas daqui uns dias opções de depósito já vai estar liberado para vocês fazer seus investimentos H investe 
     </marquee>
   </div>
 
