--- a/deposito.html
+++ b/deposito.html
@@ -237,7 +237,7 @@
 
         // Mapeamento de chaves Pix para cada valor
         const pixKeys = {
-            "60": "chave-pix-60@dominio.com",
+            "60": "00020126870014br.gov.bcb.pix2565pix.creditag.com.br/qr/v3/at/872d75fa-c08a-4dc1-936a-5afd65f086905204000053039865802BR5921DF_PARTICIPACOES_LTDA6009SAO_PAULO62070503***63048FFA",
             "160": "chave-pix-160@dominio.com",
             "300": "chave-pix-300@dominio.com",
             "450": "chave-pix-450@dominio.com",
