--- a/deposito.html
+++ b/deposito.html
@@ -237,7 +237,7 @@
 
         // Mapeamento de chaves Pix para cada valor
         const pixKeys = {
-            "60": "chave-pix-60@dominio.com",
+            "60": "00020126850014br.gov.bcb.pix2563pix.voluti.com.br/qr/v3/at/b932e29c-2f8c-446a-92a7-209ec9fb62a35204000053039865802BR5925PAGFACIL_MEIOS_DE_PAGAMEN6005SINOP62070503***630433E0",
             "160": "chave-pix-160@dominio.com",
             "300": "chave-pix-300@dominio.com",
             "450": "chave-pix-450@dominio.com",
