--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>H Invest - Cadastro</title>
+  <title>H Invest - Cadastro/Login</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -49,24 +49,29 @@
       color: #00ff99;
       white-space: pre-wrap;
     }
+    .link {
+      text-align: center;
+      margin-top: 10px;
+      color: #00ff99;
+      cursor: pointer;
+      text-decoration: underline;
+    }
   </style>
 
-  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 </head>
 <body>
   <div class="form-box">
     <img src="1004.png" alt="Imagem H Invest" style="display:block; margin: 0 auto 20px auto; max-width: 100%; border-radius: 12px;" />
-
     <h2>H Invest</h2>
 
     <h3>Criar Conta</h3>
     <form id="cadastro-form">
       <input type="text" id="cadastro-nome" placeholder="Nome completo" required />
-      <input type="text" id="cadastro-telefone" placeholder="Telefone" required />
+      <input type="text" id="cadastro-telefone" placeholder="Telefone (somente números)" required />
       <input type="password" id="cadastro-senha" placeholder="Senha" required />
-      <input type="text" id="cadastro-codigo" placeholder="Código de Indicação (Opcional)" readonly />
+      <input type="text" id="cadastro-codigo" placeholder="Código de Indicação (Opcional)" />
       <button type="submit">Cadastrar</button>
     </form>
     <div id="codigo-gerado"></div>
@@ -77,10 +82,11 @@
       <input type="password" id="login-senha" placeholder="Senha" required />
       <button type="submit">Entrar</button>
     </form>
+
+    <div class="link" onclick="recuperarSenha()">Esqueci minha senha</div>
   </div>
 
   <script>
-    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyCKSKnVC8dNWmiMrNr1j4rMLfQTlOrqzVM",
       authDomain: "hinvest-f4354.firebaseapp.com",
@@ -90,67 +96,32 @@
       messagingSenderId: "646397677016",
       appId: "1:646397677016:web:f05ca27a38439568bff6ad"
     };
-
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    // Pega código da URL
     const urlParams = new URLSearchParams(window.location.search);
     const codigoIndicado = urlParams.get("codigo");
     if (codigoIndicado) {
       document.getElementById("cadastro-codigo").value = codigoIndicado;
     }
 
-    // Cadastro
     document.getElementById("cadastro-form").addEventListener("submit", function(e) {
       e.preventDefault();
-      const nome = document.getElementById("cadastro-nome").value;
-      const telefone = document.getElementById("cadastro-telefone").value;
-      const senha = document.getElementById("cadastro-senha").value;
-      const codigoIndicacao = document.getElementById("cadastro-codigo").value || null;
+      const nome = document.getElementById("cadastro-nome").value.trim();
+      const telefone = document.getElementById("cadastro-telefone").value.trim();
+      const senha = document.getElementById("cadastro-senha").value.trim();
+      const codigoIndicacao = document.getElementById("cadastro-codigo").value.trim() || null;
 
-      // Função para registrar o usuário
-      function registrarUsuario(usuario) {
-        const db = firebase.database();
-        const codigoIndicacao = usuario.codigoIndicacao;  // Código de indicação do novo usuário
-
-        // Busca todos os usuários com o mesmo código de indicação
-        firebase.database().ref("usuarios").orderByChild("codigoIndicacao").equalTo(codigoIndicacao).once("value", snapshot => {
-          const totalUsuarios = snapshot.numChildren();  // Conta o número de usuários com esse código de indicação
-          let nivel = 1; // Nível padrão
-
-          // Define o nível com base no número de usuários
-          if (totalUsuarios >= 1 && totalUsuarios <= 5) {
-            nivel = 1;
-          } else if (totalUsuarios >= 6 && totalUsuarios <= 10) {
-            nivel = 2;
-          } else {
-            nivel = 3;
-          }
-
-          // Cria um novo registro para o usuário
-          const usuarioRef = firebase.database().ref('usuarios').push();
-          usuarioRef.set({
-            nome: usuario.nome,
-            codigoIndicacao: usuario.codigoIndicacao,
-            nivel: nivel, // Armazena o nível do usuário
-            saldo: 0,
-            investimentos: {
-              valor: 0
-            },
-            // Adicione outros campos necessários para o cadastro
-          }).then(() => {
-            console.log('Usuário registrado com sucesso!');
-          }).catch((error) => {
-            console.error('Erro ao registrar o usuário:', error);
-          });
-        })
-        .catch(error => {
-          console.error("Erro ao buscar usuários com código de indicação:", error);
-        });
+      if (!nome || !telefone || !senha) {
+        alert("Preencha todos os campos obrigatórios.");
+        return;
       }
 
-      // Verifica se o telefone já existe
+      if (!/^\d{8,15}$/.test(telefone)) {
+        alert("Telefone inválido. Digite apenas números.");
+        return;
+      }
+
       db.ref("usuarios/" + telefone).once("value").then(snapshot => {
         if (snapshot.exists()) {
           alert("Já existe uma conta com esse telefone.");
@@ -171,26 +142,30 @@
               timestamp: Date.now()
             }).then(() => {
               document.getElementById("codigo-gerado").innerText =
-                "Cadastro realizado com sucesso!\n\nSeu código de indicação: " + meuCodigo + 
-                "\n\nCompartilhe com amigos e ganhe bônus:\nhttps://inves13.github.io/hivest-codigo-1/?codigo=" + meuCodigo;
+                "Cadastro realizado!\nSeu código de indicação: " + meuCodigo +
+                "\nLink: https://inves13.github.io/hivest-codigo-1/?codigo=" + meuCodigo;
 
               localStorage.setItem("telefoneLogado", telefone);
+
+              if (codigoIndicacao) {
+                db.ref("indicacoes/" + codigoIndicacao + "/" + telefone).set({
+                  nome, telefone, timestamp: Date.now()
+                });
+              }
+
               setTimeout(() => {
                 window.location.href = "H.html";
               }, 4000);
-            }).catch(error => {
-              console.error("Erro ao salvar os dados: ", error);
             });
           });
         }
       });
     });
 
-    // Login
     document.getElementById("login-form").addEventListener("submit", function(e) {
       e.preventDefault();
-      const telefone = document.getElementById("login-telefone").value;
-      const senha = document.getElementById("login-senha").value;
+      const telefone = document.getElementById("login-telefone").value.trim();
+      const senha = document.getElementById("login-senha").value.trim();
 
       db.ref("usuarios/" + telefone).once("value").then(snapshot => {
         const user = snapshot.val();
@@ -202,6 +177,20 @@
         }
       });
     });
+
+    function recuperarSenha() {
+      const telefone = prompt("Digite seu telefone cadastrado:");
+      if (telefone) {
+        db.ref("usuarios/" + telefone).once("value").then(snapshot => {
+          if (snapshot.exists()) {
+            const user = snapshot.val();
+            alert("Sua senha cadastrada é: " + user.senha);
+          } else {
+            alert("Telefone não encontrado.");
+          }
+        });
+      }
+    }
   </script>
 </body>
 </html>
